--- a/.cubepaas-devops.yml
+++ b/.cubepaas-devops.yml
@@ -24,4 +24,6 @@ stages:
   - name: Deploy
     steps:
       - applyYamlConfig:
-          path: ./deploy/deployment.yaml
+          multiClusterDeploy:
+          - clusterName: ""
+            yamlPath: ./deployment.yaml
