--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: php-test
-  type: NodePort
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 80
